--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,11 +1,80 @@
 {% extends 'base_html.html' %}
 {% block title %}
-    Django|Website
-{% endblock %}
-
+   Shadowsocok | {{ block.super }}
+{% endblock title%}
 {% block body %}
     {{ block.super }}
-    <div class="">
-    
+    <div class="container" xmlns="http://www.w3.org/1999/html">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0">
+                <div class="jumbotron" align="center" style="background-color: #DBDBDB">
+                  <h2>可能是目前最快的Shadowsocks</h2></br>
+                  <p>美国/日本 多条国际线路任意选择，高速网路，总有一条线路适合您！</p>
+                    <p>5元/月，50元/年，超大流量，支持UDP转发，支持多设备同时使用。</p>
+                    <p>支持FinalSpeed双向加速，小水管也能流畅观看YouTube 720P</p></br>
+                        <p align="right">
+                            <a class="btn btn-primary btn-lg" style="margin-left: 10px; margin-right: 10px" href="#" role="button" data-toggle="modal" data-target="#免费试用">免费试用</a>
+                            <a class="btn btn-success btn-lg" style="margin-left: 10px; margin-right: 10px" href="#" role="button" data-toggle="modal" data-target="#购买套餐">购买套餐</a>
+                            <a class="btn btn-warning btn-lg" style="margin-left: 10px; margin-right: 10px" href="#" role="button" data-toggle="modal" data-target="#什么是SS">什么是SS</a>
+                        </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- 免费试用Modal -->
+        <div class="modal fade" id="免费试用" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">免费试用</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p>购买之前可以先免费试用，试用时间从申请开始到第二天凌晨1点。</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+        <!-- 购买套餐Modal -->
+        <div class="modal fade" id="购买套餐" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">免费试用</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p>购买之前可以先免费试用，试用时间从申请开始到第二天凌晨1点。</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+        <!-- 什么是SS Modal -->
+        <div class="modal fade" id="什么是SS" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">免费试用</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p>购买之前可以先免费试用，试用时间从申请开始到第二天凌晨1点。</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
     </div>
 {% endblock %}
