--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -67,7 +67,14 @@
                     <h4 class="modal-title" id="myModalLabel">免费试用</h4>
                   </div>
                   <div class="modal-body">
-                    <p>购买之前可以先免费试用，试用时间从申请开始到第二天凌晨1点。</p>
+                    <p>Shadowsocks（中文名称：影梭）是使用Python等语言开发的、基于Apache许可证开源的代理软件。
+                        Shadowsocks使用socks5代理，用于保护网络流量。
+                        在中国大陆被广泛用于突破防火长城（GFW），以浏览被封锁的内容。</p>
+                    <h4>运行原理</h4>
+                    <p>Shadowsocks的运行原理与其他代理工具基本相同，使用特定的中转服务器完成数据传输。</p>
+                    <p>在服务器端部署完成后，用户需要按照指定的密码、加密方式和端口使用客户端软件与其连接。
+                        在成功连接到服务器后，客户端会在用户的电脑上构建一个本地socks5代理。浏览网络时，网络流量会被分到本地socks5代理，
+                        客户端将其加密之后发送到服务器，服务器以同样的加密方式将流量回传给客户端，以此实现代理上网。</p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
