--- a/website/templates/base_html.html
+++ b/website/templates/base_html.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        {% block title %}玫瑰之墙{% endblock title %}
+        {% block title %}罗塞之墙{% endblock title %}
     </title>
     <!-- Bootstrap -->
     {% load staticfiles %}
     <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{% static "bootstrap/js/jquery.js" %}"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -33,16 +37,16 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                               </button>
-                              <a class="navbar-brand" href="">玫瑰之墙</a>
+                              <a class="navbar-brand" href="{% url "website:index" %}"><img src="{% static "img/shadowsocks.jpg" %}" width="40px" height="40px"></a>
                             </div>
 
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                               <ul class="nav navbar-nav navbar-right">
-                                <li ><a href="#">Home <span class="sr-only">(current)</span></a></li>
-                                <li><a href="">套餐详情</a></li>
-                                  <li><a href="">使用教程</a></li>
-                                  <li><a href="">软件下载</a></li>
+                                <li><a href="{% url "website:index" %}" >Home <span class="sr-only">(current)</span></a></li>
+                                <li id="buy_button"><a href="{% url "website:buy" %}">套餐详情</a></li>
+                                  <li id="archive_button"><a href="{% url "website:archive" %}">使用教程</a></li>
+                                  <li id="download_button"><a href="{% url "website:download" %}">软件下载</a></li>
                               </ul>
                             </div><!-- /.navbar-collapse -->
                         </div>
@@ -51,9 +55,5 @@
             </div>
         </div>
     {% endblock body%}
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{% static "bootstrap/js/jquery.js" %}"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
   </body>
 </html>
