--- a/website/templates/buy.html
+++ b/website/templates/buy.html
@@ -10,12 +10,7 @@
     })
     </script>
     {{ block.super }}
-    <div class="container" xmlns="http://www.w3.org/1999/html">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
-
-            </div>
-        </div>
-
+    <div>
+    
     </div>
 {% endblock %}
